[gd_scene load_steps=2 format=3 uid="uid://dujih1lyp6fhe"]

[ext_resource type="Script" uid="uid://dha1wg05wt128" path="res://Scenes/CharacterScenes/Components/AttackComponent/AttackComponent.gd" id="1_k2sho"]

[node name="AttackComponent" type="Node"]
script = ExtResource("1_k2sho")

[node name="AttackCooldown" type="Timer" parent="."]

[connection signal="timeout" from="AttackCooldown" to="." method="_on_attack_cooldown_timeout"]
